--- a/Raspored casova/app/src/main/res/layout-land/activity_fourth.xml
+++ b/Raspored casova/app/src/main/res/layout-land/activity_fourth.xml
@@ -2,17 +2,21 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.veljko.projekat.FourthActivity"
-    android:background="#CEFFFF">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#CEFFFF"
+    tools:context="com.example.veljko.projekat.FourthActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="horizontal|vertical">
+        android:id="@+id/viewSV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="horizontal|vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <HorizontalScrollView
+            android:id="@+id/viewHSV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
